# Hear-Me-Out

./: .gitignore  README.md  package-lock.json  package.json
frontend/: tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ConversationView.tsx  MetricsComparison.tsx  MetricsResultView.tsx  ThemeToggle.tsx  VoiceConversion.tsx
frontend/src/components/conversation/: ControlPanel.tsx  DownloadBar.tsx  MessageFeed.tsx  VoiceMetricsModal.tsx
frontend/src/hooks/: useConversation.ts
infra/: build-frontend.sh  run_all.sh  setup.sh  vc_engine.sh
services/app_api/: app.py  metrics.py  pyproject.toml
services/app_api/study/: __init__.py  analysis.py  engine.py  models.py  router.py  storage.py
services/meanvc/: pyproject.toml  server.py
services/minicpm_o/: server.py
services/xvc/: server.py
study-frontend/: index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
study-frontend/src/: App.tsx  api.ts  index.css  main.tsx  vite-env.d.ts
study-frontend/src/components/: QuestionnaireForm.tsx  ScenarioCall.tsx
study-frontend/src/components/admin/: QuestionnaireBuilder.tsx  ScenarioEditor.tsx  StudyEditor.tsx
study-frontend/src/hooks/: useStudyConversation.ts
study-frontend/src/lib/: config.ts
study-frontend/src/pages/: Admin.tsx  ParticipantFlow.tsx
