[project]
name = "hearmeout-meanvc"
version = "0.1.0"
description = "Hear-Me-Out MeanVC: real-time streaming voice conversion + PersonaPlex chat-proxy (CPU)."
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "numpy==1.26.4",
    "soundfile==0.12.1",
    "librosa==0.10.2",
    "sphn>=0.1.4,<0.2",   # 0.2+ removed OpusStreamWriter.read_bytes; server uses the 0.1.x API
    "aiohttp>=3.10",
    # Speaker verification (wavlm_large) used by the MeanVC runtime
    # (src/runtime/speaker_verification, copied into the workspace by setup.sh).
    # Pinned to torch-2.4-compatible transformers (same as services/xvc): newer
    # releases import DTensor from torch.distributed.tensor, which needs torch>=2.5.
    "transformers==4.44.1",
    "einops==0.7.0",
    # s3prl (wavlm_large SV) runs from the torch-hub cache; its upstreams import these.
    "omegaconf",
    "pyyaml",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
